--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1>Exceptional Header</h1>
       <h2>Really, it is a great header</h2>
     </div>
-   
+      </header>
     <!-- Add a nav tag to wrap these nested links instead of a span-->
     <span>
       <a href="about.html">About</a> <a href="contact.html">Contact</a> <a href="products.html">Products</a>
