--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     </div>
       </header>
     <!-- Add a nav tag to wrap these nested links instead of a span-->
-    
+    <nav>
+      
+    </nav>
     <span>
       <a href="about.html">About</a> <a href="contact.html">Contact</a> <a href="products.html">Products</a>
     </span>
