--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <span>
       <a href="about.html">About</a> <a href="contact.html">Contact</a> <a href="products.html">Products</a>
     </span>
-
+     </nav>
     <!-- Replace this div with a main tag to wrap the 'main' content of the webpage-->
     <div>
 
