--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <span>&copy; 2014 Exceptional Realty.</span>
         <p>All Rights Reserved.</p>
       </div>
-    
+      </main>
 
   </body>
 </html>
