--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 
 
       <!-- Replace this div with a section tag to better describe this portion of content -->
-      
+      <section>
+        
+      </section>
 
         <!-- Wrap the nested img in a figure tag-->
         <div>
