Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 
 
         <!-- Wrap the nested img in a figure tag-->
-        
+        <figure>
+          
+        </figure>
         <div>
           <img src="images/intro-pic.jpg" alt="An exceptional living room." title="Welcome to Exceptional Living Rooms">
 
