--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       </div>
 
       <!-- Replace the following div with a details tag -->
-      <deta>
+      <detail>
         <!-- Replace the following span with a summary tag -->
         <span>&copy; 2014 Exceptional Realty.</span>
         <p>All Rights Reserved.</p>
