--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <!-- Replace the following div with a details tag -->
       <div>
         <!-- Replace the following span with a summary tag -->
-        <>&copy; 2014 Exceptional Realty.</span>
+        <deta>&copy; 2014 Exceptional Realty.</span>
         <p>All Rights Reserved.</p>
       </div>
       </main>
