--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       </div>
 
       <!-- Replace the following div with a details tag -->
-      <>
+      <details>
         <!-- Replace the following span with a summary tag -->
         <details>&copy; 2014 Exceptional Realty.</details>
         <p>All Rights Reserved.</p>
