Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <!-- Replace the following div with a details tag -->
       <details>
         <!-- Replace the following span with a summary tag -->
-        <>&copy; 2014 Exceptional Realty.</details>
+        <summa>&copy; 2014 Exceptional Realty.</details>
         <p>All Rights Reserved.</p>
       </details>
       </main>
