--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <a href="#" target="_blank">Facebook</a><br>
             <a href="#" target="_blank">Twitter</a>
           </p>
-      </>
+      </section>
     </div>
     <!-- End of main part of webpage -->
 
