Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
       <div>
 
         <!-- Wrap the nested video content below with figure tags -->
+        <figure>
+          
+        </figure>
         <div>
           <video controls>
             <source src="http://ironboard-curriculum-content.s3.amazonaws.com/front-end/lab-assets/real-estate.mp4" type="video/mp4">
