Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           </video>
        </figure>
           <!-- Wrap this text in a figcaption tag so that it captions the video above-->
-          
+          <figcaption></figcaption>
           <span>Exceptional Promotional Video - Source: archive.org</span>
         </div>
       </div>
