--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
           <!-- Wrap this text in a figcaption tag so that it captions the video above-->
           <figcaption>
           <span>Exceptional Promotional Video - Source: archive.org</span>
+          </figcaption>
         </div>
       </div>
 
