Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <span>Exceptional Promotional Video - Source: archive.org</span>
           </figcaption>
         </div>
-      </s>
+      </section>
 
       <!-- Replace this div with a third section tag -->
       <section>
