--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
 
       <!-- Replace this div with a third section tag -->
       <section>
+        <figure>
+          
+        </figure>
           <h3>Links</h3>
           <p>
             <a href="#" target="_blank">Home Restoration</a><br>
