Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <a href="#" target="_blank">Facebook</a><br>
             <a href="#" target="_blank">Twitter</a>
           </p>
-          
+          </figure>
       </section>
     </main>
     <!-- End of main part of webpage -->
