Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <figcaption>
           <span>Exceptional Promotional Video - Source: archive.org</span>
           </figcaption>
-          
+             </figure>
         </div>
       </section>
 
