--- a/index.html
+++ b/index.html
@@ -58,11 +58,10 @@
           </video>
 
           <!-- Wrap this text in a figcaption tag so that it captions the video above-->
-          <figcaption>
-          <span>Exceptional Promotional Video - Source: archive.org</span>
+          <figcaption>Exceptional Promotional Video - Source: archive.org</span>
           </figcaption>
             </figure>
-        
+
       </section>
 
       <!-- Replace this div with a third section tag -->
