--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
           </video>
 
           <!-- Wrap this text in a figcaption tag so that it captions the video above-->
-          <figcaption>Exceptional Promotional Video - Source: archive.org
-          </figcaption>
+          <figcaption>Exceptional Promotional Video - Source: archive.org</figcaption>
             </figure>
 
       </section>
